# aws

./: README.md
infra/amis/: CFN_packer.yml  Makefile  debian.pkr.hcl  eks.pkr.hcl  github.pkr.hcl  packer.dockerfile  server.pkr.hcl  tailscale.pkr.hcl  ubuntu.pkr.hcl
infra/cloudfront/: CFN_0xcafetech.yml  CFN_policies.yml
infra/clusters/: CFN_alb_prod.yml  CFN_ecs_cafetech.yml  CFN_ecs_cooltrans.yml  CFN_ecs_packer.yml  CFN_ecs_prod.yml  Makefile
infra/iams/: CFN_IAM_ec2_server.yml  CFN_IAM_ec2_tailscale.yml  CFN_IAM_ecs_execution.yml  CFN_IAM_group_developers.yml  CFN_IAM_mp_packer_user.yml  CFN_IAM_mp_ssh_host_sign.yml  CFN_IAM_role_eventbridge.yml  CFN_IAM_role_packer.yml  CFN_IAM_service_cafetech.yml  CFN_IAM_service_cooltrans.yml  CFN_IAM_vpc_flow_logs.yml
infra/servers/: CFN_asg_prod.yml  CFN_asg_tailscale.yml  CFN_sg_lambda.yml  CFN_sg_public_ssh.yml  Makefile
infra/tf/: .terraform.lock.hcl  .tflint.hcl  iam_aws_support.tf  main.tf  (+3 more)
projects/0xcafe/: Makefile  Pipfile  blog_server.py  cafetech.dockerfile  pyproject.toml  tailwind.config.js  tailwind.input.css  tailwind.tw.css
projects/0xcafe/cafetech/: img.py  templates.py
projects/0xcafe/cafetech/routes/: cooltrans.py  project.py  sitemap.py  slash.py
projects/0xcafe/static/: breakout-worker.js  breakout.css  breakout.js  map.js  robots.txt  tailwind.css
projects/0xcafe/static/leaflet/: leaflet.css
projects/0xcafe/templates/: cooltrans.html  layout.html  slash.html
projects/0xcafe/templates/projects/: alxhttp.html  alxhttp.json  aws.html  aws.json  cooltrans.html  cooltrans.json
(+160 files in other folders)
