[project]
name = "0xcafe"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
	"aiohttp-jinja2",
	"aiohttp~=3.9",
	"alxhttp",
	"aws-xray-sdk",
	"lxml",
	"opentelemetry-instrumentation-aiohttp-client",
	"opentelemetry-instrumentation-requests",
	"opentelemetry-instrumentation-urllib",
	"opentelemetry-instrumentation-urllib3",
	"pillow",
	"tenacity",
	"types-lxml",
]
dev-dependencies= [
	"black",
	"isort",
	"pytest",
	"pytest-cov",
	"pytest-mock",
	"ruff",
	"twine",
]

[project.scripts]
server = "python example/server.py"
tidy = "bash -cxe 'isort . && black . && ruff .'"
upload = "twine upload dist/*"
css = "bunx tailwindcss -i ./tailwind.tw.css -o ./static/tailwind.css"
csswatch = "bunx tailwindcss -i ./tailwind.tw.css -o ./static/tailwind.css --watch"
